--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Home</a>
         <a href="#about">About</a>
         <a href="#event">Event</a>
-        <a href="#">Contact</a>
+        <a href="#contact">Contact</a>
       </div>
       <div class="logo">
         <a href="index.html">
@@ -195,6 +195,26 @@
       </div>
     </div>
   </section>
+
+  <!-- Contact Footer -->
+  <footer id="contact">
+    <h2>Contact Us</h2>
+    <div class="icon">
+      <div class="col-md-3">
+        <img src="./assets/img/location.png" alt="">
+        <span>Sulawesi Tenggara, Kendari</span>
+      </div>
+      <div class="col-md-3">
+        <img src="./assets/img/call.png" alt="">
+        <span>085255938568</span>
+      </div>
+      <div class="col-md-3">
+        <img src="./assets/img/mail.png" alt="">
+        <span>@akcasar21@gmail.com</span>
+      </div>
+    </div>
+    <p> &copy; 2022 | Akcasar </p>
+  </footer>
 
   <script src="assets/js/script.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
