--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Navbar Section -->
-  <nav class="fixed-top">
+  <header class="fixed-top">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="nav-list d-flex">
         <a href="#">Home</a>
@@ -26,7 +26,7 @@
         </a>
       </div>
     </div>
-  </nav>
+  </header>
 
   <!-- Hero Section -->
   <div class="hero"></div>
@@ -187,11 +187,11 @@
   <!-- Event Section -->
   <section id="event">
     <div class="container">
-      <div class="row mt">
-        <div class="col-md-6" style="margin-top: 75px;">
+      <div class="row align-items-center">
+        <div class="col-md-6">
           <h2>Event Us</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur<br> 
+            Lorem ipsum dolor sit amet consectetur<br>
             adipisicing elit. Similique, ut!
           </p>
 
@@ -199,12 +199,15 @@
         <div class="col-md-6">
           <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
             </div>
 
-            <div class="carousel-inner">
+            <div class="carousel-inner shadow">
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="1.jpg" class="d-block w-100%" alt="...">
                 <div class="carousel-caption d-none d-md-block">
@@ -221,7 +224,7 @@
 
               </div>
               <div class="carousel-item">
-                <img src="4.jpg" class="d-block w-100%" alt="...">
+                <img src="2.jpg" class="d-block w-100%" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -229,21 +232,29 @@
               </div>
             </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden text-light">Next</span>
             </button>
           </div>
         </div>
-      
       </div>
-
     </div>
   </section>
+
+
+  <!-- Footer Section -->
+  <footer>
+    <div class="container">
+      @copyright 2022
+    </div>
+  </footer>
 
   <script src="assets/js/script.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
