--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </p>
 
         <!-- Peristiwa 1 -->
-        <div class="col-md-6">
+        <div class="col-md-6 mt-4">
           <img type="button" data-bs-toggle="modal" data-bs-target="#img-1" src="./assets/img/bg-hero.jpg"
             class="img-fluid img-thumb shadow" />
           <!-- Modal -->
@@ -96,7 +96,7 @@
         </div>
 
         <!-- Peristiwa 2 -->
-        <div class="col-md-6">
+        <div class="col-md-6 mt-4">
           <img type="button" data-bs-toggle="modal" data-bs-target="#img-2" src="./assets/img/bg-hero.jpg"
             class="img-fluid img-thumb shadow" />
           <!-- Modal -->
