perbaiki peristiwa penting

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ut!</p>
 
 					<!-- Peristiwa 1 -->
-					<div class="col-md-6">
+					<div class="col-md-6 mt-4">
 						<img type="button" data-bs-toggle="modal" data-bs-target="#img-1" src="./assets/img/bg-hero.jpg" class="img-fluid img-thumb shadow" />
 						<!-- Modal -->
 						<div class="modal fade" id="img-1" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
@@ -84,7 +84,7 @@
 					</div>
 
 					<!-- Peristiwa 2 -->
-					<div class="col-md-6">
+					<div class="col-md-6 mt-4">
 						<img type="button" data-bs-toggle="modal" data-bs-target="#img-2" src="./assets/img/bg-hero.jpg" class="img-fluid img-thumb shadow" />
 						<!-- Modal -->
 						<div class="modal fade" id="img-2" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
