--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
 				<!-- Peristiwa 1 -->
 				<div class="col-md-6 mt-4">
-					<img type="button" data-bs-toggle="modal" data-bs-target="#img-1" src="./assets/img/bg-hero.jpg"
+					<img type="button" data-bs-toggle="modal" data-bs-target="#img-1" src="./assets/img/bom.jpg"
 						class="img-fluid img-thumb shadow" />
 					<!-- Modal -->
 					<div class="modal fade" id="img-1" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title" id="img2Label">Keterangan 1</h5>
+									<h5 class="modal-title" id="img2Label">Pengeboman Kota Nagasaki dan Hiroshima</h5>
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
@@ -90,14 +90,14 @@
 
 				<!-- Peristiwa 2 -->
 				<div class="col-md-6 mt-4">
-					<img type="button" data-bs-toggle="modal" data-bs-target="#img-2" src="./assets/img/bg-hero.jpg"
+					<img type="button" data-bs-toggle="modal" data-bs-target="#img-2" src="./assets/img/Rengasdengklok.jpg"
 						class="img-fluid img-thumb shadow" />
 					<!-- Modal -->
 					<div class="modal fade" id="img-2" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title" id="img2Label">Keterangan 2</h5>
+									<h5 class="modal-title" id="img2Label">Peristiwa Rengasdengklok</h5>
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
@@ -115,14 +115,14 @@
 
 				<!-- Peristiwa 3 -->
 				<div class="col-md-6 mt-4">
-					<img type="button" data-bs-toggle="modal" data-bs-target="#img-3" src="./assets/img/bg-hero.jpg"
+					<img type="button" data-bs-toggle="modal" data-bs-target="#img-3" src="./assets/img/Naskah.jpg"
 						class="img-fluid img-thumb shadow" />
 					<!-- Modal -->
 					<div class="modal fade" id="img-3" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title" id="img2Label">Keterangan 3</h5>
+									<h5 class="modal-title" id="img2Label">Penyusunan Naskah Proklamasi</h5>
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
@@ -140,14 +140,14 @@
 
 				<!-- Peristiwa 4 -->
 				<div class="col-md-6 mt-4">
-					<img type="button" data-bs-toggle="modal" data-bs-target="#img-4" src="./assets/img/bg-hero.jpg"
+					<img type="button" data-bs-toggle="modal" data-bs-target="#img-4" src="./assets/img/bacaan.jpg"
 						class="img-fluid img-thumb shadow" />
 					<!-- Modal -->
 					<div class="modal fade" id="img-4" tabindex="-1" aria-labelledby="img2Label" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title" id="img2Label">Keterangan 4</h5>
+									<h5 class="modal-title" id="img2Label">Pembacaan Teks Proklamasi</h5>
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
