--- a/index.html
+++ b/index.html
@@ -19,6 +19,37 @@
 		</svg>
 	</div>
 
+	<!-- Mobile Navbar -->
+	<header id="mobile" class="fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">
+					<span class="fw-bold">HUT <span class="text-danger">RI</span></span>
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#home">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#about">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#event">Event</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+
 	<!-- Navbar Section -->
 	<header id="navbar" class="fixed-top">
 		<div class="container d-flex justify-content-between align-items-center">
