deskripsi peristiwa penting

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<div class="container">
 			<div class="row">
 				<h2>Peristiwa Penting</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ut!</p>
+				<p>Beberapa peristiwa penting yang perlu dikenang selama Indonesia memperjuangkan kemerdekaan</p>
 
 				<!-- Peristiwa 1 -->
 				<div class="col-md-6 mt-4">
@@ -107,9 +107,11 @@
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
-									<p class="text-start">Deskripsi Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-										inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, iusto.</p>
-									<div class="text-muted text-end">17 Agustus 1945</div>
+									<p class="text-start">BOM atom yang jatuh pada 6 dan 9 Agustus 1945 di Hirosima dan Nagasaki menjadi
+										hari yang bersejarah bagi Jepang dan masyarakat di dunia. Aksi pengeboman tersebut dilakukan oleh
+										Amerika Serikat sebagai bentuk balasan dari pihak AS yang lebih dulu diserang oleh Jepang pada 7
+										Desember 1941.</p>
+									<div class="text-muted text-end">6-9 Agustus 1945</div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Kembali</button>
@@ -132,9 +134,11 @@
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
-									<p class="text-start">Deskripsi Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-										inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, iusto.</p>
-									<div class="text-muted text-end">17 Agustus 1945</div>
+									<p class="text-start">Peristiwa Rengasdengklok terjadi pada 16 Agustus 1945 pukul 04.00 WIB. Pasca
+										melakukan rapat di Cikini 71, para utusan golongan muda menghadap ke Bung Karno dan Bung Hatta pada
+										15 Agustus 1945 malam. Agenda para utusan golongan muda itu adalah mendesak supaya proklamasi
+										diadakan pada 16 Agustus 1945.</p>
+									<div class="text-muted text-end">16 Agustus 1945</div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Kembali</button>
@@ -157,8 +161,9 @@
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
-									<p class="text-start">Deskripsi Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-										inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, iusto.</p>
+									<p class="text-start">Tanggal 17 Agustus 1945 pukul 03.00 WIB, naskah proklamasi yang disusun oleh
+										Soekarno, Mohammad Hatta, dan Soebardjo dibuat di ruang makan. Naskah tersebut terdiri dari dua
+										alinea yang dibuat selama 2 jam.</p>
 									<div class="text-muted text-end">17 Agustus 1945</div>
 								</div>
 								<div class="modal-footer">
@@ -182,8 +187,10 @@
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 								</div>
 								<div class="modal-body">
-									<p class="text-start">Deskripsi Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-										inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, iusto.</p>
+									<p class="text-start">tanggal 17 Agustus pada 1945 , Soekarno membacakan teks proklamasi Kemerdekaan
+										Indonesia. Peristiwa bersejarah tersebut dilakukan di depan rumah Soekarno, di Jalan Pegangsaan
+										Timur, Jakarta Pusat. Tentu saja, hal ini disambut suka cita oleh bangsa Indonesia yang telah lama
+										menantikan kemerdekaan.</p>
 									<div class="text-muted text-end">17 Agustus 1945</div>
 								</div>
 								<div class="modal-footer">
