--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col">
 					<p>Happy</p>
 					<h2>
-						Indendance <br />
+						Independence <br />
 						Indonesian Day
 					</h2>
 					<p>17 Agustus 2022</p>
